--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
 
  <ul>
   <li>
-    <h2><img height="150" width="300" src="https://storageaccount1205.blob.core.windows.net/imageblobcontainer/Baby.png"></h2>
+    <h2><img height="150" width="300" src="https://dongeuistorage.blob.core.windows.net/blob/Chrysanthemum.jpg"></h2>
   </li>
   <li>
-    <h2><img height="150" width="300" src="https://storageaccount1205.blob.core.windows.net/imageblobcontainer/dog.png"></h2>
+    <h2><img height="150" width="300" src="https://dongeuistorage.blob.core.windows.net/blob/Desert.jpg"></h2>
   </li>
 </ul> 
 
