--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,13 @@
 
  <ul>
   <li>
-    <h2><img height="150" width="300" src="https://dongeuistorage1.blob.core.windows.net/blob/Chrysanthemum.jpg"></h2>
+    <h2><img height="150" width="300" src="https://dongeuistorage1.blob.core.windows.net/blob1/Chrysanthemum.jpg"></h2>
   </li>
   <li>
-    <h2><img height="150" width="300" src="https://dongeuistorage1.blob.core.windows.net/blob/Desert.jpg"></h2>
+    <h2><img height="150" width="300" src="https://dongeuistorage1.blob.core.windows.net/blob1/Desert.jpg"></h2>
   </li>
   <li>
-    <h2><img height="150" width="300" src="https://dongeuistorage1.blob.core.windows.net/blob/Desert.jpg"></h2>
+    <h2><img height="150" width="300" src="https://dongeuistorage1.blob.core.windows.net/blob1/Desert.jpg"></h2>
   </li>
 </ul> 
 
